@@ -1,3 +1,12 @@
+2003-08-15  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3380418>: Ignore specified string encoding when constructing file, mailto and help URLs
+
+        Reviewed by mjs, darin.
+
+        * kwq/KWQKURL.mm:
+        (KURL::KURL): store the URL string as UTF-8 when the URL is file, mailto and help.
+
 2003-08-17  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
